Fix directory creation when certain ftp servers are used.

BUG: 141232